@@ -1,3 +1,15 @@
+2012-07-11  Adenilson Cavalcanti  <cavalcantii@gmail.com>
+
+        Build fix + remove dead code
+        https://bugs.webkit.org/show_bug.cgi?id=91039
+
+        Reviewed by Filip Pizlo.
+
+        An unused variable was breaking compilation (thanks to warnings being treated as errors).
+
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+        (JSC::DFG::SpeculativeJIT::emitCall):
+
 2012-07-11  Mark Rowe  <mrowe@apple.com>
 
         <http://webkit.org/b/91024> Build against the latest SDK when targeting older OS X versions.
